# ai-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  render.yaml
backend/: agents.py  config.py  db.py  google_workspace.py  llm.py  mcp.py  repository.py  server.py
docs/: HACKATHON_HANDS_ON.md  UI_HANDS_ON_GUIDE.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Login.jsx  SpaceBackground.jsx  Toast.jsx  WorkspaceHub.jsx
tests/: test_app.py  test_google_workspace.py
